--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,16 +5,35 @@
 	id="WebApp_ID" version="3.1">
 	<display-name>CommercialWebsite</display-name>
 
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
+
+	<servlet>
+		<servlet-name>Home</servlet-name>
+		<servlet-class>homepage_servlet.HomeServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Home</servlet-name>
+		<url-pattern></url-pattern>
+		<url-pattern>/home</url-pattern>
+	</servlet-mapping>
+
 	<context-param>
 		<param-name>dateFormat</param-name>
 		<param-value>dd-MM-yyyy HH:mm:ss</param-value>
 	</context-param>
-	
+
 	<context-param>
 		<param-name>tabIndicator</param-name>
 		<param-value>home</param-value>
 	</context-param>
-	
+
 	<context-param>
 		<param-name>userNavTabIndicator</param-name>
 		<param-value>user-info</param-value>
@@ -53,16 +72,5 @@
 		<url-pattern>/admin-update-advanced</url-pattern>
 		<url-pattern>/admin-manage</url-pattern>
 	</filter-mapping>
-
-
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
-
 
 </web-app>
